--- a/src/components/FindYourAccount/FindYourAccount.module.scss
+++ b/src/components/FindYourAccount/FindYourAccount.module.scss
@@ -50,6 +50,8 @@
 	background-color: #ccd0d5;
 	border: 1px solid $border;
 	border-radius: 5px;
+	color: $cancelBtn-text;
+	font-weight: 700;
 	height: 2.25rem;
 	width: 5.625rem;
 
@@ -62,6 +64,7 @@
 	background-color: $blue;
 	border: 1px solid $border;
 	border-radius: 5px;
+	font-weight: 700;
 	height: 2.25rem;
 	margin-left: 5px;
 	width: 5.625rem;
